# my_very_small_language_model

./: .gitignore  README.md  pyproject.toml
src/: data_loader.py
src/MVSLM/: __init__.py  model.py  tokenizer.py
src/frequency_word_pedictor/: __init__.py  frequency_model.py
